# kt-biome

./: .gitignore  README.md  kohaku.yaml  pyproject.toml
creatures/bounded_general/: config.yaml
creatures/creative/prompts/: system.md
creatures/general/: config.yaml
creatures/general/prompts/: system.md
creatures/ops/prompts/: system.md
creatures/researcher/prompts/: system.md
creatures/reviewer/prompts/: system.md
creatures/swe/: config.yaml
creatures/swe/prompts/: system.md
kt_biome/plugins/: cost_tracker.py  termination_goal.py
kt_biome/tools/: bash_docker.py  bash_ssh.py  database.py
skills/git-commit-flow/: SKILL.md
terrariums/auto_research/: terrarium.yaml
terrariums/deep_research/: terrarium.yaml
terrariums/deep_research/prompts/: synthesizer.md
tests/unit/: test_bash_docker_tool.py  test_bash_ssh_tool.py  test_cost_tracker_plugin.py  test_termination_goal_plugin.py
