[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kt-biome"
version = "1.2.0"
description = "Default creatures, terrariums, plugins, tools, I/O, and triggers for KohakuTerrarium"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["kt_biome*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"
